<resources>
    <string name="artyom_kadushko" translatable="false">Artyom Kadushko</string>
    <string name="herrlestrate" translatable="false">HerrLeStrate</string>
    <string name="skip">Пропустить</string>
    <string name="next">Следующий</string>
    <string name="welcome_info">Панки хой</string>
    <string name="welcome_page_desc">Это стандартное описание</string>
    <string name="navigation_drawer_open">Открыть навигационный драйвер</string>
    <string name="navigation_drawer_close">Заказать навигационный драйвер</string>
    <string name="nav_header_desc">Навигация</string>
    <string name="method_sort">Метод сортировки</string>
    <string name="compactView">Компактный вид</string>
    <string name="darkTheme">Тёмная тема</string>
    <string name="skipWelcomePage">Пропускать стартовую страницу</string>
    <string name="appTitle">App title</string>
    <string name="emailProfile" translatable="false">vemakus@gmail.com</string>
    <string name="nameProfile">Артём Кадушко</string>
    <string name="choice_whiteTheme">Светлая тема</string>
    <string name="choice_darkTheme">Тёмная тема</string>
    <string name="standartMaket">Стандартный макет</string>
    <string name="fullMaket">Полный макет</string>
    <string name="selectGrid">Квадратный</string>
    <string name="selectList">Лист</string>
    <string name="selectSettings">Настройки</string>
    <string name="deleteApp">Удалить приложение</string>
    <string name="showSettings">Показать настройки</string>
    <string name="showCount">Показать количество</string>
    <string name="sort_0">Без сортировки</string>
    <string name="sort_1">Сортировать по названию</string>
    <string name="sort_2">Сортировать по названию в обратном порядке</string>
    <string name="sort_3">Сортировать по дате установки</string>
    <string name="sort_4">Сортировать по количеству запусков</string>
    <string name="frequency">Запущено раз:</string>
    <string name="app_name">Артём Кадушко Инфо</string>
    <string name="action_add_on_desktop">Добавить на рабочий стол</string>
    <string name="desktop">Рабочий стол</string>
    <string name="delete_from_desktop">Удалить с рабочего стола</string>
    <string name="default_url_name" translatable="false">Yandex</string>
    <string name="default_url_url" translatable="false">yandex.by</string>
    <string name="imageUpdateNow">Обновить экран сейчас</string>
    <string name="imageUpdateDelay">Задержка обновления фона</string>
    <string name="notifications">Оповещения</string>
    <string name="default_notification">Оповещение #1</string>
    <string name="notification_with_color_and_icon">Оповещение #2</string>
    <string name="remove_app_from_desktop">Удалить</string>
    <string name="src_for_bacground">Источник для фона</string>
    <string name="default_desc">Портретный: 4 иконки в строке \n Ландшафтный: 6 иконок в строке</string>
    <string name="densce_desc">Портретный: 5 значков в ряду \n Ландшафтный: 7 значков в ряду</string>
</resources>
