<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="alreadyRunned"
        android:title="@string/skipWelcomePage"/>
    <CheckBoxPreference
        android:key="theme"
        android:title="@string/darkTheme"/>
    <CheckBoxPreference
        android:key="style"
        android:title="@string/compactView" />
    <ListPreference
        android:key="sort"
        android:defaultValue="0"
        android:title="@string/method_sort"
        android:entries="@array/sortMethodList"
        android:entryValues="@array/sortMethodValues"/>
    <ListPreference
        android:key="imageUpdateDelay"
        android:defaultValue="0"
        android:title="@string/imageUpdateDelay"
        android:entries="@array/imageUpdateList"
        android:entryValues="@array/imageUpdateValues"/>
    <ListPreference
        android:key="imageURL"
        android:defaultValue="0"
        android:title="@string/src_for_bacground"
        android:entries="@array/imageURLList"
        android:entryValues="@array/imageURLValues"/>
    <Preference
        android:key="imageUpdateNow"
        android:title="@string/imageUpdateNow"/>


</PreferenceScreen>