<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_uninstall_app"
        android:orderInCategory="100"
        android:title="@string/deleteApp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_app_settings"
        android:orderInCategory="200"
        android:title="@string/showSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_count_app_launches"
        android:orderInCategory="200"
        android:title="@string/showCount"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_on_desktop"
        android:orderInCategory="200"
        android:title="@string/action_add_on_desktop"
        app:showAsAction="never"
        />

</menu>