<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/welcome_rel4"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/clickable_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/radiogroup"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp" />

            <RadioButton
                android:id="@+id/radioButton"
                style="@style/MyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:checked="true"
                android:text="@string/standartMaket" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/default_desc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/welcome_rel3"
                app:layout_constraintTop_toTopOf="@+id/welcome_rel3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clickable_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/radiogroup"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/MyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/fullMaket" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/densce_desc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/welcome_rel4"
                app:layout_constraintTop_toTopOf="@+id/welcome_rel4" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>